Zero row correct alignment

--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,8 @@
     width: 27px;
     height: auto;
 }
+
+#zero-row{
+   text-align: right;
+
+}
